# RSS-desktop

./: .eslintrc.cjs  .gitignore  README.md  bun.lockb  components.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  type.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/src/: cmd.rs  config.rs  main.rs  server.rs  updater.rs  window.rs
src/components/: LeftPanel.tsx
src/components/ui/: input.tsx  scroll-area.tsx
src/state/: rssResource.ts
src/utils/: fileIO.ts  initDataJson.ts  request.ts
