[package]
name = "rss_reader"
version = "0.0.0"
description = "RSS reader"
authors = ["Talljack"]
license = "MIT"
repository = "https://github.com/Talljack/RSS-desktop"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5.2", features = [ "system-tray", "dialog-message", "dialog-save", "dialog-open", "shell-all", "os-all", "http-all", "http-multipart", "updater", "notification-all", "window-all", "path-all"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-sql = { git= "https://github.com/tauri-apps/plugins-workspace", branch = "v1",features = ["sqlite"] }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = "^0.4.14"
tiny_http = "0.12.0"
reqwest_dav = "0.1.4"
dirs = "5.0.1"

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = {version="0.51.1",features= ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Graphics_Imaging", "Media_Ocr", "Foundation", "Globalization", "Storage", "Storage_Streams"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
